[package]
name = "tracing-web"
version = "0.1.0"
edition = "2021"
authors = [
  "Martin Molzer <WorldSEnder@users.noreply.github.com>",
]
license = "MIT OR Apache-2.0"
keywords = ["web", "wasm", "tracing", "log"]
categories = ["debugging", "wasm", "web-programming"]
description = "A tracing compatible subscriber layer for web platforms."
readme = "README.md"
repository = "https://github.com/WorldSEnder/tracing-web"

[dependencies]
js-sys = "0.3.59"
tracing-core = { version =  "0.1.29", default-features = false }
tracing-subscriber = { version = "0.3.15", default-features = false, features = ["fmt"] }
wasm-bindgen = { version = "0.2.82", default-features = false }
web-sys = { version = "0.3.59", features = ["console"], default-features = false }

[dev-dependencies.tracing-subscriber]
version = "0.3.15"
features = ["time"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = [
    ".",
    "examples/trace-yew-app"
]
